clear parsed note

--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
             document.getElementById("inputText").value = ""
             document.getElementById("visualResult").innerHTML = ""
             document.getElementById("visualResultNoNotes").innerHTML = ""
+            document.getElementById("result").innerHTML = ""
         }
     </script>
 </head>
