--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Hue Geen</title>
+    <title>HueGene</title>
 </head>
 
 <body>
     <div class="header">
-        <p>HueGeen</p>
+        <p>HueGene</p>
     </div>
     <div class="title-wrapper">
         <!-- <div
