Add input for artist

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
     <div class="page-description">
         <div class="title-wrapper">
             <div class="title-container">
-                <div id="titleDisplay" class="title" ondblclick="editTitle()">Untitled</div>
+                <label for="title">Song Title</label>
+                <div id="titleDisplay" class="title" ondblclick="editTitle()">Enter Song Title</div>
                 <div class="tooltip">Double click to edit title</div>
             </div>
         </div>
         <div class="artist-wrapper">
             <div class="artist-container">
-                <div id="artistDisplay" class="artist" ondblclick="editArtist()">Untitled</div>
-                <div class="tooltip">Double click to artist</div>
+                <label for="artist">Artist</label>
+                <div id="artistDisplay" class="artist" ondblclick="editArtist()">Enter Artist</div>
+                <div class="tooltip">Double click to edit artist</div>
             </div>
         </div>
     </div>
