remove pause after each line and add Sound chain for better sound output

--- a/parser.html
+++ b/parser.html
@@ -363,20 +363,12 @@
         </div>
 
         <div id="defaultCode">
-            R(1.5) R(.75) E(.25) E(.25) E(.25)
-            E(1) E(.25) E(.25) E(.5) F(.25) Ab(.5) Bb(.25)
-            Bb(1) R(.25) E(.25) E(.25) F(.75) Ab(.25) Bb(.25)
-            Bb(1) R(.25) E(.25) Cp(.5) Bb(.5) Ab(.25) Ab(.25)
-            Ab(.25) F(.25) E(.5) R(.5) R(1) E(.25) E(.25)
-            E(.5) C(1) E(.25) F(.75) Ab(.25) Bb(.25)
-            Bb(1) R(.25) E(.25) E(.25) F(.75) Ab(.25) Bb(.25)
-            Bb(1) R(.25) Ab(.25) Cp(.5) Bb(.25) Ab(.5) Ab(.25)
-            Ab(1.5) R(1) R(.25) Cp(.25)
-            Ebp(.5) Dbp(.5) Cp(.25) Cp(.25) Cp(1) Ab(.5)
-            Ebp(.5) Dbp(.5) Cp(.25) Cp(.25) Cp(1) Ab(.25) Ab(.25)
-            Ebp(.25) Dbp(.5) Cp(.5) Cp(.25) Cp(.5) Bb(.25) Ab(.75)
-            Cp(.5) Dbp(.5) Cp(.25) Bb(.25)
-            Bb(1.5) R(1.5)
+            R(1.5) R(.75) E(.25) E(.25) E(.25) E(1) E(.25) E(.25) E(.5) F(.25) Ab(.5) Bb(.25) Bb(1) R(.25) E(.25) E(.25)
+            F(.75) Ab(.25) Bb(.25) Bb(1) R(.25) E(.25) Cp(.5) Bb(.5) Ab(.25) Ab(.25) Ab(.25) F(.25) E(.5) R(.5) R(1)
+            E(.25) E(.25) E(.5) C(1) E(.25) F(.75) Ab(.25) Bb(.25) Bb(1) R(.25) E(.25) E(.25) F(.75) Ab(.25) Bb(.25)
+            Bb(1) R(.25) Ab(.25) Cp(.5) Bb(.25) Ab(.5) Ab(.25) Ab(1.5) R(1) R(.25) Cp(.25) Ebp(.5) Dbp(.5) Cp(.25)
+            Cp(.25) Cp(1) Ab(.5) Ebp(.5) Dbp(.5) Cp(.25) Cp(.25) Cp(1) Ab(.25) Ab(.25) Ebp(.25) Dbp(.5) Cp(.5) Cp(.25)
+            Cp(.5) Bb(.25) Ab(.75) Cp(.5) Dbp(.5) Cp(.25) Bb(.25) Bb(1.5) R(1.5)
 
             Ebp(1.5) Cp(1) Ebp(.25) Dbp(.25)
             Dbp(.5) Cp(.25) Bb(.5) Bb(.25) Ab(1) Ab(.25) F(.25)
