--- a/index.html
+++ b/index.html
@@ -61,17 +61,18 @@
             </div>
         </div>
     </div>
+    <div class="instrument-controls">
+        <button onclick="changeInstrument('piano')" class="instrument-button" id="piamoIns">Piano</button>
+        <button onclick="changeInstrument('guitar')" class="instrument-button">Guitar</button>
+        <button onclick="changeInstrument('organ')" class="instrument-button">Organ</button>
+    </div>
     <div class="button">
         <button onclick="downloadSVG()" style="background-color: #8a4af3;">Download SVG</button>
         <button id="clearNotes" onclick="clearNotes()" style="background-color: #d9d9d9; color: black;">Clear
             Notes</button>
-        <!-- <button  class="play-button" onclick="playSong()">Play Music</button> -->
-        <!-- <button id="stopButton" class="stop-button" onclick="stopPlaying()">
-            <span class="stop-icon">■</span>
-            Stop Music
-        </button> -->
         <div id="unmappedNotes"></div>
     </div>
+
     <div class="footer">
         <p>HueGene v 1.0 </p>
         <!-- <p>&copy; Enda Rae | HueGeen v 1.0 </p> -->
