--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body>
     <div class="header">
-        <p>HueGene</p>
+        <p><a href="index.html" target="_self" rel="noopener noreferrer">HueGene</a></p>
+        <a href="scan.html" target="_blank" rel="noopener noreferrer">Scan to Play</a>
     </div>
     <div class="page-description">
         <div class="title-wrapper">
@@ -77,7 +78,8 @@
         <p>HueGene v 1.0 </p>
         <!-- <p>&copy; Enda Rae | HueGeen v 1.0 </p> -->
     </div>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
+    <script src="combined.js"></script>
     <!-- <script src="http://unpkg.com/tone"></script> -->
 </body>
 
